[project]
name = "olx-bot"
version = "0.1.0"
description = "Bot for parsing OLX search and send messages in telegram"
authors = [
    {name = "Bohdan Kokovych",email = "kokovych@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

